--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="hero-section">
         <div class="hero-text">
-            <h4 class="name">Sabbir Ahmed Samir</h4>
+            <h4 class="name">Mark Wayne</h4>
             <h1 class="title"><span class="title-start">Front End</span> <br> <span class="title-end">Designer</span></h1>
             <p class="details">An enthusiast Front-End Developer specializing in creating clean, fully responsive and user-friendly landing pages using HTML & CSS. Focusing on bringing designs to life with precision and a strong attention to visual detail, ensuring a seamless user experience.</p>
 
